icons moved to right and hover css fixed, text form overlap implemented

--- a/public/styles/tweets-container.css
+++ b/public/styles/tweets-container.css
@@ -6,8 +6,7 @@
   gap: 10px;
   position: relative;
   margin-bottom: 3rem;
-  overflow: hidden;
-  max-height: 200px;
+  max-height: 400px;
   overflow-y: auto;
 }
 
@@ -45,14 +44,14 @@
 .text {
   border-bottom: 2px solid #03a9f7;
   padding: 5px 0;
-  overflow: hidden;
+  overflow: scroll;
   word-wrap: break-word;
 }
 
-.container .tweet__bottom {
+.container .tweet-bottom {
   display: flex;
   flex-direction: row;
-  justify-content: baseline;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
 }
@@ -62,12 +61,10 @@
   color: #888;
 }
 
-.container .tweet__bottom > .icons {
-  font-size: 25px;
-  margin-left: 3rem;
-  float: right;
+.container .tweet-bottom > .icons {
+  font-size: 20px;
 }
 
-.tweet__bottom .icons:hover {
+.tweet-bottom .icons i:hover {
   color: #FFD700
 }
